src/components/Navbar/_navbar.scss
.navbar {
    width: 100vw;
    background-color: rgba(240, 236, 229, 0.5);

    backdrop-filter: blur(12px);
    position: sticky;
    top: 0;
    left: 0;
    color: #f0ece5;
    transition: all 0.3s ease-in;
    z-index: 100;
    border-bottom: 1px solid $color-white;
    box-shadow: 0px 5px 10px rgba(150, 150, 150, 0.4);

    &.hidden {
        top: -12rem;
    }

    &__container {
        width: $container-width;
        margin: 0 auto;
        display: flex;
        justify-content: space-between;
        height: 12rem;
        align-items: center;

        @include mobileXL {
            width: $container-width-mobile;
        }
    }
    // width: $container-width;
    // margin: 0 auto;
    // display: flex;
    // justify-content: space-between;
    // height: 10rem;
    // position: sticky;
    // top: 0;
    // left: 0;

    &__logo {
        height: 12rem;
        width: 12rem;
    }

    &__links {
        color: $color-primary;

        @include mobileXL {
            display: none;
        }

        ul {
            display: flex;
            align-items: center;
            height: 100%;
            justify-content: center;
        }
    }

    &__mobile {
        display: none;

        @include mobileXL {
            height: 3.5rem;
            width: 6rem;
            display: flex;
            flex-direction: column;
            justify-content: space-between;
            margin-right: 1rem;
            span {
                display: block;
                width: 100%;
                height: 4px;
                background-color: $color-white;
                border-radius: 50px;
                transition: all 0.2s;
            }

            &.open {
                height: 4.6rem;

                span:nth-of-type(1) {
                    transform: rotate(-45deg);
                    transform-origin: top right;
                }

                span:nth-of-type(2) {
                    display: none;
                }

                span:nth-of-type(3) {
                    transform: rotate(45deg);
                    transform-origin: bottom right;
                }
            }
        }
    }
}

